fixed about tab on mobile

--- a/src/About.css
+++ b/src/About.css
@@ -4,7 +4,7 @@
     font-family: Roboto;
     width: 60%;
     /* text-align: center; */
-    margin-top: 5vh;
+    /* margin-top: 5vh; */
 }
 
 @media screen and (min-width: 601px) {
